fix left aligned menu bug in chrome

--- a/hex-color-8-bit-style.css
+++ b/hex-color-8-bit-style.css
@@ -39,6 +39,7 @@ body {
 
 /* A elements that don't have a class get default styles */
 a:not([class]) {
+  -webkit-text-decoration-skip: ink;
   text-decoration-skip-ink: auto;
 }
 
@@ -65,7 +66,9 @@ select {
   *,
   *::before,
   *::after {
+    -webkit-animation-duration: 0.01ms !important;
     animation-duration: 0.01ms !important;
+    -webkit-animation-iteration-count: 1 !important;
     animation-iteration-count: 1 !important;
     transition-duration: 0.01ms !important;
     scroll-behavior: auto !important;
@@ -75,12 +78,13 @@ select {
 
 @font-face {
   font-family: "Atkinson-Hyperlegible";
-  src: url("./font/Atkinson-Hyperlegible-Regular-102a.woff2")format("woff2");
+  src: url("./font/Atkinson-Hyperlegible-Regular-102a.woff2") format("woff2");
 }
 
 @font-face {
   font-family: "Notulen";
-  src: url("font/notulen_serif_display_extra_bold_-webfont.woff2")format("woff2");
+  src: url("font/notulen_serif_display_extra_bold_-webfont.woff2")
+    format("woff2");
 }
 
 :root {
@@ -94,8 +98,20 @@ body {
   height: 100vh;
   display: grid;
   grid-template-columns:
+    minmax(0, 1.5rem) minmax(-webkit-min-content, -webkit-max-content) minmax(
+      40%,
+      auto
+    )
+    minmax(-webkit-min-content, -webkit-max-content) minmax(0, 1.5rem);
+  grid-template-columns:
+    minmax(0, 1.5rem) minmax(-webkit-min-content, -webkit-max-content) minmax(40%, auto)
+    minmax(-webkit-min-content, -webkit-max-content) minmax(0, 1.5rem);
+  grid-template-columns:
     minmax(0, 1.5rem) minmax(min-content, max-content) minmax(40%, auto)
     minmax(min-content, max-content) minmax(0, 1.5rem);
+  grid-template-rows:
+    minmax(-webkit-min-content, 10%) minmax(0, 3rem) 70% minmax(0, 3rem)
+    minmax(0, auto);
   grid-template-rows:
     minmax(min-content, 10%) minmax(0, 3rem) 70% minmax(0, 3rem)
     minmax(0, auto);
@@ -195,30 +211,9 @@ output {
   /* padding: 0.25rem; */
 }
 
-output{
-  padding-left: .5ch;
-  padding-right: .25ch;
-}
-
-.horizontalOverlay::before {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: hsl(243, 42%, 51%);
-  opacity: 0.1;
-  transform: scaleX(0);
-  transform-origin: 100% 100%;
-  transition: transform 0.6s cubic-bezier(0.53, 0.21, 0, 1);
-  will-change: transform;
-}
-
-.horizontalOverlay:hover::before {
-  transform-origin: 0 0;
-  transform: scaleX(1);
+output {
+  padding-left: 0.5ch;
+  padding-right: 0.25ch;
 }
 
 /* The root */
@@ -235,20 +230,32 @@ output{
 
 .p-nested-dropdowns li li {
   padding: 0.5rem;
+  float: right;
+
   /* border: 0.5rem solid transparent; */
+  -moz-columns: inherit;
   columns: inherit;
   background-color: var(--bg-color);
   border-radius: 0.8rem;
+  height: -webkit-min-content;
+  height: -moz-min-content;
   height: min-content;
   margin-bottom: 0.5ch;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
   box-shadow: 0 1.4px 2.9px rgba(0, 0, 0, 0.053),
     0 3.8px 7.9px rgba(0, 0, 0, 0.081), 0 9px 19px rgba(0, 0, 0, 0.121),
     0 30px 63px rgba(0, 0, 0, 0.22);
-  /* border-left: 1ch solid transparent; */
 }
-.p-nested-dropdowns li li li{
+
+.p-nested-dropdowns li li li {
+  float: left;
+  width: -webkit-min-content;
+  width: -moz-min-content;
   width: min-content;
+  height: -webkit-min-content;
+  height: -moz-min-content;
   height: min-content;
   background-color: transparent;
   padding: 0;
@@ -271,6 +278,8 @@ output{
   padding: 0;
 
   /* Width */
+  width: -webkit-min-content;
+  width: -moz-min-content;
   width: min-content;
 }
 
@@ -280,33 +289,33 @@ output{
   position: absolute;
   top: 0;
   height: 6em;
-  padding-left: .5ch;
+  padding-left: 0.5ch;
 }
 
 .p-nested-dropdowns button {
-  /* color: inherit;
-  background-color: inherit;
-  border: none; */
   display: inline-block;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
-  padding: .5rem;
+  padding: 0.5rem;
 }
 
 /* Show the direct sub dropdown when hovering the list item */
 .p-nested-dropdowns li:hover > ul {
   display: block;
+  flex-direction: column;
 }
-
 
 .pushUpBtn {
-    border: none;
-    border-radius: .8rem;
-    transition: transform 0.25s ease, box-shadow 0.25s ease, background-color 0.25s ease;
-    /* box-shadow: 0 4px 6px rgba(50,50,93,.11), 0 1px 3px rgba(0,0,0,.08); */
+  border: none;
+  border-radius: 0.8rem;
+  transition: transform 0.25s ease, box-shadow 0.25s ease,
+    background-color 0.25s ease;
+  /* box-shadow: 0 4px 6px rgba(50,50,93,.11), 0 1px 3px rgba(0,0,0,.08); */
 }
 
-.pushUpBtn:hover{
-    transform: translate3d(0px,-1px,0px);
-    background-color: rgb(169, 206, 255);
-    box-shadow: 0 7px 14px rgba(50,50,93,.1), 0 3px 6px rgba(0,0,0,.08);
+.pushUpBtn:hover {
+  transform: translate3d(0px, -1px, 0px);
+  background-color: rgb(169, 206, 255);
+  box-shadow: 0 7px 14px rgba(50, 50, 93, 0.1), 0 3px 6px rgba(0, 0, 0, 0.08);
 }
